--- a/DataBase/views/showUsers.ejs
+++ b/DataBase/views/showUsers.ejs
@@ -23,15 +23,23 @@
         <% for(user of result) { %>
             <tr>
                 <td><%= user.id %></td>
-                <td><%= user.emial %></td>
+                <td><%= user.email %></td>
                 <td><%= user.username %></td>
                 <td>
                     <form method ="GET" action="/users/<%= user.id %>/edit">
                         <button >Edit username</button>
                     </form>
                 </td>
+                <td>
+                    <form method="GET" action="/user/<%=user.id%>/delete">
+                      <button>Delete</button>
+                    </form>
+                </td>
             </tr>
         <% } %>
+        <form method="GET" action="/user/new">
+            <button type="submit">New</button>
+        </form>
     </table>
 </body>
 </html>
