--- a/MONGO/mogodb- Express/views/new.ejs
+++ b/MONGO/mogodb- Express/views/new.ejs
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>new Chat</title>
-</head>
-<body>
-    <h3>new chat</h3>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>New Chat</title>
+  </head>
+  <body>
+    <h3>New Chat</h3>
     <form method="POST" action="/chats">
-        <input placeholder="From" name="from" required>
-        <br><br>
-        <textarea name="msg" placeholder="Message" required></textarea>
-        <br><br>
-        <input placeholder="Receiver" name="to" required>
-        <br><br>
-        <button>Create</button>
+      <input placeholder="From" name="from" required />
+      <br /><br />
+      <textarea name="msg" placeholder="Message" required></textarea>
+      <br /><br />
+      <input placeholder="Receiver" name="to" required />
+      <br /><br />
+      <button>Create</button>
     </form>
-</body>
+  </body>
 </html>
