--- a/MONGO/mogodb- Express/views/edit.ejs
+++ b/MONGO/mogodb- Express/views/edit.ejs
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>edit</title>
-</head>
-<body>
+  </head>
+  <body>
     <h3>Edit your chat : <b><%= chat._id %> </b></h3>
-
     <form method="post" action="/chats/<%= chat._id %>?_method=PUT">
-        <textarea name="msg" rows="10"  cols="50"><%= chat.msg %></textarea>
-        <button>Edit</button>
+      <textarea name="msg" rows="10" cols="50"><%= chat.msg %></textarea>
+      <button>Edit</button>
     </form>
-</body>
+  </body>
 </html>
