--- a/6_templating/views/error.ejs
+++ b/6_templating/views/error.ejs
@@ -1,5 +1,4 @@
-<%- include("header/head.ejs") %> 
+<%- include("header/head.ejs") %>
 <body>
-    <h1>Not ssearch found</h1>
+  <h1>Not search found</h1>
 </body>
-</html>
