--- a/8_rest_classes/views/index.ejs
+++ b/8_rest_classes/views/index.ejs
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <!-- main html file -->
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>All post</title>
-    <link rel="stylesheet" href="/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/style.css" />
+  </head>
+  <body>
     <h1>Quora post</h1>
-    <br/>
+    <br />
     <a href="http://localhost:8080/posts/new" class="newPost">Creat new post</a>
-    <br/>
-    <% for(post of posts){%> 
-        <div class="post">
-            <h3 class="user">@<%= post.username %></h3>
-            <h4 class="content"><%= post.content %></h4>
-            <br>
-            <a href="http://localhost:8080/posts/<%=post.id %>" class="newPost">see in details</a> 
-            <a href="http://localhost:8080/posts/<%=post.id %>/edit" class="newPost">Edit content</a>
-            <hr/>
-            <form method="post" action="/posts/<%= post.id %>?_method=DELETE">
-                <button>delete</button>
-            </form>
-        </div>
+    <br />
+    <% for(post of posts){%>
+    <div class="post">
+      <h3 class="user">@<%= post.username %></h3>
+      <h4 class="content"><%= post.content %></h4>
+      <br />
+      <a href="http://localhost:8080/posts/<%=post.id %>" class="newPost"
+        >see in details</a
+      >
+      <a href="http://localhost:8080/posts/<%=post.id %>/edit" class="newPost"
+        >Edit content</a
+      >
+      <hr />
+      <form method="post" action="/posts/<%= post.id %>?_method=DELETE">
+        <button>delete</button>
+      </form>
+    </div>
     <%} %>
-</body>
+  </body>
 </html>
