--- a/8_rest_classes/views/new.ejs
+++ b/8_rest_classes/views/new.ejs
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>creat new post</title>
-</head>
-<body>
+  </head>
+  <body>
     <form method="post" action="/posts">
-        <input placeholder="Enter your username" name="username"> <br/>
-        <textarea name="content" placeholder="Enter your content"></textarea><br/>
-        <button>submit post</button>
+      <input placeholder="Enter your username" name="username" /> <br />
+      <textarea name="content" placeholder="Enter your content"></textarea
+      ><br />
+      <button>submit post</button>
     </form>
-</body>
+  </body>
 </html>
