--- a/8_rest_classes/public/style.css
+++ b/8_rest_classes/public/style.css
@@ -1,24 +1,24 @@
-h1{
-    color: brown;
+h1 {
+  color: brown;
 }
-.post{
-    background-color: lightpink;
+.post {
+  background-color: lightpink;
 }
-.user{
-    font-style: italic;
+.user {
+  font-style: italic;
 }
-.newPost{
-    width: 100px;
-    padding: 5px;
-    box-shadow: 0px 2px 0px rgb(197, 134, 134);
-    height: 100px;
-    background-color: rgb(179, 179, 237);
-    border-radius: 50px;
-    color: black;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    text-decoration: none;
+.newPost {
+  width: 100px;
+  padding: 5px;
+  box-shadow: 0px 2px 0px rgb(197, 134, 134);
+  height: 100px;
+  background-color: rgb(179, 179, 237);
+  border-radius: 50px;
+  color: black;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  text-decoration: none;
 }
-button{
-    background-color: rgb(232, 0, 0);
-    border-radius: 50px;
+button {
+  background-color: rgb(232, 0, 0);
+  border-radius: 50px;
 }
