--- a/8_rest_classes/views/edit.ejs
+++ b/8_rest_classes/views/edit.ejs
@@ -1,15 +1,12 @@
 <%- include("header/boilerplate.ejs") %>
 
-  <body>
-    <h2>Edit your post</h2>
-    <p>post id: <%= post.id %>
-    </p>
-    <p>Post urername : <%= post.username %>
-    </p>
-    <form method="post" action="/posts/<%= post.id %>?_method=PATCH">
-      <!-- in form only possible to post and get req show use override-->
-      <textarea rows="10" cols="35" name="content">
-<%= post.content %></textarea>
-      <button>submit</button>
-    </form>
-  </body>
+<body>
+  <h2>Edit your post</h2>
+  <p>post id: <%= post.id %></p>
+  <p>Post username : <%= post.username %></p>
+  <form method="post" action="/posts/<%= post.id %>?_method=PATCH">
+    <!-- in form only possible to post and get req show use override-->
+    <textarea rows="10" cols="35" name="content"><%= post.content %></textarea>
+    <button>submit</button>
+  </form>
+</body>
