--- a/8_rest_classes/views/index.ejs
+++ b/8_rest_classes/views/index.ejs
@@ -1,24 +1,25 @@
 <%- include("header/boilerplate.ejs") %>
 
-  <body>
-    <h1>Quora post</h1>
+<body>
+  <h1>Quora post</h1>
+  <br />
+  <a href="http://localhost:8080/posts/new" class="newPost">Create new post</a>
+  <br />
+  <% for(post of posts){%>
+  <div class="post">
+    <h3 class="user">@<%= post.username %></h3>
+    <h4 class="content"><%= post.content %></h4>
     <br />
-    <a href="http://localhost:8080/posts/new" class="newPost">Creat new post</a>
-    <br />
-    <% for(post of posts){%>
-      <div class="post">
-        <h3 class="user">@<%= post.username %>
-        </h3>
-        <h4 class="content">
-          <%= post.content %>
-        </h4>
-        <br />
-        <a href="http://localhost:8080/posts/<%=post.id %>" class="newPost">see in details</a>
-        <a href="http://localhost:8080/posts/<%=post.id %>/edit" class="newPost">Edit content</a>
-        <hr />
-        <form method="post" action="/posts/<%= post.id %>?_method=DELETE">
-          <button>delete</button>
-        </form>
-      </div>
-      <%} %>
-  </body>
+    <a href="http://localhost:8080/posts/<%=post.id %>" class="newPost"
+      >see in details</a
+    >
+    <a href="http://localhost:8080/posts/<%=post.id %>/edit" class="newPost"
+      >Edit content</a
+    >
+    <hr />
+    <form method="post" action="/posts/<%= post.id %>?_method=DELETE">
+      <button>delete</button>
+    </form>
+  </div>
+  <%} %>
+</body>
