--- a/8_rest_classes/views/show.ejs
+++ b/8_rest_classes/views/show.ejs
@@ -1,14 +1,14 @@
 <%- include("header/boilerplate.ejs") %>
 
-  <body>
-    <h2>Here is your post in details</h2>
-    <p>Post id : <%= post.id %>
-    </p>
-    <div class="post">
-      <h3 class="user">@<%= post.username %>
-      </h3>
-      <h4 class="content">
-        <%= post.content %>
-      </h4>
-    </div>
-  </body>
+<body>
+  <% if (post) { %>
+  <h2>Here is your post in details</h2>
+  <p>Post id : <%= post.id %></p>
+  <div class="post">
+    <h3 class="user">@<%= post.username %></h3>
+    <h4 class="content"><%= post.content %></h4>
+  </div>
+  <% } else { %>
+  <p>Post not found</p>
+  <% } %>
+</body>
